# ComfyUI-TRELLIS2

./: README.md  comfy-env-root.toml  pyproject.toml  requirements.txt
nodes/: comfy-env.toml  nodes_export.py  nodes_inference.py  nodes_unwrap.py  stages.py
nodes/rembg/: BiRefNet.py
nodes/trellis2/: __init__.py  dinov3.py
workflows/: geometry_only_1024.json  geometry_only_1024_cascade.json  geometry_only_1536.json  geometry_only_512.json  geometry_texture.json  refinement.json  standalone_texturing.json
