[project]
name = "ComfyUI-TRELLIS2"
description = "ComfyUI nodes for TRELLIS.2 - Microsoft's image-to-3D generation model. Generate high-quality 3D meshes with PBR materials from a single image. Models autodownload from HuggingFace."
version = "0.2.5"
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/PozzettiAndrea/ComfyUI-TRELLIS2"

[tool.comfy]
PublisherId = "pznodes"
DisplayName = "TRELLIS2"
Icon = ""
